# commonroad-search

./: .gitignore  README.md
GSMP/tools/commonroad-collision-checker/: .gitignore  CMakeLists.txt  MANIFEST.in  README.plugins.rst  README.rst  requirements.txt
GSMP/tools/commonroad-collision-checker/commonroad_cc/collision_detection/: pycrcc_collision_dispatch.py  scenario.py
GSMP/tools/commonroad-collision-checker/commonroad_cc/visualization/: pycrcc.py
GSMP/tools/commonroad-collision-checker/cpp/: CMakeLists.txt  Readme.txt
GSMP/tools/commonroad-collision-checker/cpp/collision/include/collision/: application.h  application_settings.h  collision_object.h  collision_object_ex.h  i_collision_checker.h  i_collision_container.h  line_segment.h  primitive_collision_checker.h  raytrace_primitive.h  shape_group.h  time_variant_collision_object.h
GSMP/tools/commonroad-collision-checker/cpp/collision/src/: collision_object.cc  collision_object_ex.cc  primitive_collision_checker.cc  raytrace_primitive.cc  raytrace_utils.cc  shape_group.cc  time_variant_collision_object.cc
GSMP/tools/commonroad-collision-checker/cpp/collision/src/narrowphase/: point.cc  polygon.cc  rectangle_aabb.cc  shape.cc  triangle.cc
GSMP/tools/commonroad-collision-checker/cpp/collision/src/serialize/: serialize.cc  serialize_collision_checker.cc  serialize_container_cc_obj.cc  serialize_container_obj_obj.cc  serialize_point.cc  serialize_rectangle_aabb.cc  serialize_rectangle_obb.cc  serialize_shape_group.cc  serialize_triangle.cc
GSMP/tools/commonroad-collision-checker/cpp/collision/src/solvers/: collision_queries.cc  collision_solver_default.cc
GSMP/tools/commonroad-collision-checker/cpp/tests/collision/online_tests/: broadphase_failure.h  broadphase_test.h  collision_tests.h  test_common.cc  test_common.h
GSMP/tools/commonroad-collision-checker/doc/cpp/html/: _application_8h.html  _application_8h_source.html  _main_page_8md.html  _main_page_8md_source.html  application_8h.html  application_8h_source.html  application__settings_8h_source.html  boundingvolume_8cc.html  boundingvolume_8cc_source.html  boundingvolume_8h_source.html  boundingvolume__util_8cc.html  boundingvolume__util_8cc_source.html  broadphase__failure_8h_source.html  broadphase__failure__export_8h_source.html  broadphase__failure__obj__obj__export_8h.html  broadphase__failure__obj__obj__export_8h_source.html  broadphase__test_8cc.html  broadphase__test_8cc_source.html  broadphase__test_8h_source.html  classcollision_1_1_b_v_h_intersection.html  classcollision_1_1_bounding_volume-members.html  classcollision_1_1_bounding_volume.html  classcollision_1_1_collision_checker-members.html  classcollision_1_1_collision_checker.html  classcollision_1_1_collision_function_matrix-members.html  classcollision_1_1_collision_object-members.html  classcollision_1_1_collision_object_ex-members.html  classcollision_1_1_collision_object_ex.html  classcollision_1_1_collision_request-members.html  classcollision_1_1_collision_request.html  classcollision_1_1_collision_request_data.html  classcollision_1_1_collision_request_data_multiple_obstacles.html  classcollision_1_1_collision_request_data_overlap-members.html  classcollision_1_1_collision_request_data_window_query-members.html  classcollision_1_1_collision_request_data_window_query.html  classcollision_1_1_collision_result-members.html  classcollision_1_1_distance_request-members.html  classcollision_1_1_distance_request.html  classcollision_1_1_distance_result-members.html  classcollision_1_1_distance_result.html  (+488 more)
GSMP/tools/commonroad-collision-checker/doc/cpp/html/search/: all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+45 more)
GSMP/tools/commonroad-collision-checker/doc/python/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
GSMP/tools/commonroad-collision-checker/doc/python/html/_sources/: index.rst.txt
GSMP/tools/commonroad-collision-checker/python_binding/: CMakeLists.txt
GSMP/tools/commonroad-collision-checker/python_binding/src/: module_collision.cc  py_bind.cc
GSMP/tools/commonroad-collision-checker/tests/: collision_random_tests.py  collision_unit_tests.py
GSMP/tools/commonroad-collision-checker/tutorials/: collision_checker.ipynb  commonroad_io_interface.ipynb
(+777 files in other folders)
